[gd_scene load_steps=19 format=2]

[ext_resource path="res://Enemy.gd" type="Script" id=1]
[ext_resource path="res://assets/graphical/enemy-a.png" type="Texture" id=2]
[ext_resource path="res://assets/graphical/enemy-b.png" type="Texture" id=3]
[ext_resource path="res://assets/graphical/enemy2-b.png" type="Texture" id=4]
[ext_resource path="res://assets/graphical/enemy2-a.png" type="Texture" id=5]
[ext_resource path="res://assets/graphical/enemy3-b.png" type="Texture" id=6]
[ext_resource path="res://assets/graphical/enemy3-a.png" type="Texture" id=7]
[ext_resource path="res://assets/graphical/EnemyCollision_b.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/graphical/EnemyCollision_a.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/graphical/enemy4-b.png" type="Texture" id=10]
[ext_resource path="res://assets/graphical/enemy4-a.png" type="Texture" id=11]
[ext_resource path="res://assets/graphical/enemy4b-b.png" type="Texture" id=12]
[ext_resource path="res://assets/graphical/enemy4b-a.png" type="Texture" id=13]
[ext_resource path="res://assets/graphical/enemy4b-cd.png" type="Texture" id=14]
[ext_resource path="res://assets/graphical/enemy4b-ef.png" type="Texture" id=15]
[ext_resource path="res://assets/graphical/enemy4b-ac.png" type="Texture" id=16]
[ext_resource path="res://assets/graphical/enemy4b-de.png" type="Texture" id=17]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 4 ) ],
"loop": true,
"name": "enemy2_walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 6 ) ],
"loop": true,
"name": "enemy3_walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 10 ) ],
"loop": true,
"name": "enemy4_walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 14 ), ExtResource( 17 ), ExtResource( 15 ) ],
"loop": false,
"name": "enemy4b_drop",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 12 ) ],
"loop": true,
"name": "enemy4b_walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "enemy_walk",
"speed": 5.0
} ]

[node name="Enemy" type="RigidBody2D" groups=["enemies"]]
collision_mask = 0
gravity_scale = 0.0
linear_damp = 0.0
script = ExtResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0, -42 )
scale = Vector2( 0.2, 0.2 )

[node name="StaticEnemyTimer" type="Timer" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -40 )
scale = Vector2( 2, 2 )
frames = SubResource( 3 )
animation = "enemy_walk"
playing = true

[node name="CollisionPolygon2Da" parent="." instance=ExtResource( 9 )]
visible = false

[node name="CollisionPolygon2Db" parent="." instance=ExtResource( 8 )]
visible = false

[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="StaticEnemyTimer" to="." method="_on_StaticEnemyTimer_timeout"]
[connection signal="frame_changed" from="AnimatedSprite" to="." method="_on_AnimatedSprite_frame_changed"]
